# 612-2013

./: .autoshoot.h.swp  .gitignore  .main.cpp.kate-swp  .shooter.cpp.kate-swp  .wrproject  612.cpp  612.h  AUTHORS.rst  AutoShooter.cpp  AutoShooter.h  CMakeLists.txt  Controls.h  EnhancedJoystick.cpp  EnhancedJoystick.h  EnhancedRobotDrive.cpp  EnhancedRobotDrive.h  EnhancedShooter.cpp  EnhancedShooter.h  File.cpp  File.h  Hardware.h  Joysmooth.h  LICENSE.rst  Launcher.h  NetworkCom.cpp  NetworkCom.h  PIDCounter.cpp  PIDCounter.h  Package.rar  README.md  README.rst  assignment  auto_encoders.cpp  auto_encoders.h  autonomous.cpp  autonomous.h  autonomous_presets.h  buttons.h  controls.h  dataLogger.cpp  (+42 more)
PPC603gnu/: Makefile  Makefile_linux
docs/html/: 009_2_axis_camera_8cpp.html  009_2_axis_camera_8cpp_source.html  009_2_axis_camera_8h.html  009_2_axis_camera_8h_source.html  _a_d_x_l345___i2_c_8cpp.html  _a_d_x_l345___i2_c_8cpp_source.html  _a_d_x_l345___i2_c_8h.html  _a_d_x_l345___i2_c_8h_source.html  _a_d_x_l345___s_p_i_8cpp.html  _a_d_x_l345___s_p_i_8cpp_source.html  _a_d_x_l345___s_p_i_8h.html  _a_d_x_l345___s_p_i_8h_source.html  _a_i_calibration_8h.html  _a_i_calibration_8h_source.html  _abstract_network_table_entry_store_8cpp.html  _accelerometer_8cpp.html  (+1961 more)
pnum/: Hardware.h  main.cpp  main.h
states/: state_climbing.cpp  state_climbing.h  state_driving.cpp  state_driving.h  state_shooting.cpp  state_shooting.h
vision/: DriverVision.cpp  DriverVision.h  HybridVision.cpp  HybridVision.h  RobotVision.cpp  RobotVision.h  target.h  vision.cpp  vision.h  visionVars.h
(+223 files in other folders)
